<resources>
    <string name="app_name">BAHS</string>
    <string name="app_crash">App Crash</string>
    <string name="new_login_text">Already have an account? Log in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_t_c">By checking this box, you agree to BAHS Terms and Conditions and BAHS
        Privacy Policy
    </string>
    <string name="btnname">SIGNUP</string>
    <string name="submit">SUBMIT</string>
    <string name="buy">BUY</string>
    <string name="email_forgot">Enter your email and we\'ll send you the link to reset the
        password.
    </string>

    <!-- rohit signup page string  -->
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="nick_name_hint">Nickname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="mailing_address">Mailing Address</string>
    <string name="interview_location">Interview Location</string>
    <string name="referred_by">Referred By</string>
    <string name="upload_image">Upload Image</string>

    <string name="forgot_password">
        <u>Forgot Password?</u>
    </string>

    <!-- rohit image uploading dialog -->
    <string name="open_gallery">Open Gallery</string>
    <string name="open_camera">Open Camera</string>
    <string name="what_is_the_service_that_s_needed">What is the service that\'s needed?</string>
    <string name="schedule">Schedule</string>
    <string name="permanent">Permanent</string>
    <string name="full_time">Full Time</string>
    <string name="part_time">Part Time</string>
    <string name="mornings">Mornings</string>
    <string name="weekdays">Weekdays</string>
    <string name="evenings">Evenings</string>
    <string name="overtime">Overtime</string>
    <string name="temporary">Temporary</string>
    <string name="live_in">Live in</string>
    <string name="hours">Hours</string>
    <string name="salary">Salary</string>
    <string name="yearly">Yearly</string>
    <string name="start_date">Start date</string>
    <string name="medical">Medical</string>
    <string name="language">Language</string>

    <!-- purnendu offer position-->
    <string name="comma">,</string>
    <string name="age">50</string>
    <string name="job_time">Full Time/Monday-Friday/Weekends</string>
    <string name="job_place">New York City,NY</string>
    <string name="job_wages">$150/hr</string>
    <string name="job_detail">Cooking for Children,Light Housekeeping,Twin Experience,Arts
        Crafts,Reading,Sleep Traning
    </string>
    <string name="view_more">View More</string>
    <string name="offer_expire">Offer Will be Expire in</string>
    <string name="days">days</string>
    <string name="compentation">Compentation</string>
    <string name="hourly">Hourly</string>
    <string name="offer_period">Offer Period</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="fromto">From-To</string>
    <string name="nickname">Nick Name</string>
    <string name="billing_address">Billing Address</string>
    <string name="pnone">Phone Number</string>
    <string name="title_upload_picture">Upload Picture</string>
    <string name="seeking">I am seeking:</string>
    <string name="seeking_job">A Job</string>
    <string name="seeking_service">A Service</string>
    <string name="first_name">What is Your First Name?</string>
    <string name="what_is_last_name">What is Your Last Name?</string>
    <string name="nick_name">What is Your Nick Name?</string>
    <string name="what_is_billing_address">What is Your Billing Address?</string>
    <string name="what_is_phone_number">What is Your Phone Number?</string>
    <string name="membership">Silver Membership</string>
    <string name="view_favorites">View Favorites</string>
    <string name="history">History</string>


    <!--rishabh after job activity-->
    <string name="how_was_your_interview_for_nany_position">How was your interview for \n Nanny
        Position ?
    </string>
    <string name="the_feedback_is_only_visible_to_admin">The feedback is only visible to admin
    </string>
    <string name="additional_feedback">Additional Feedback(Optional)</string>

    <string name="thanks_for_the_feedback">Thanks for the Feedback</string>
    <string name="schedule_trail">SCHEDULE TRAIL ?</string>
    <string name="continues">continue</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="find_more_staff">Find more staff ?</string>
    <string name="thanks_for_scheduling_trail">Thanks for Scheduling a trial</string>
    <string name="nick_name_alert_text">Nickname just recieved an alert \n and waiting for his/her
        confirmation
    </string>

    <!--rishabh schedule trail activity-->
    <string name="hourly_rate">Hourly Rate:$150/hr</string>
    <string name="pick_a_time">PICK A TIME AND DATE</string>
    <string name="option1">option 1: time and date</string>
    <string name="option2">option 2: time and date</string>

    <!--rishabh Payment page activity-->

    <string name="gold_membership">Gold Membership</string>
    <string name="amount_to_pay">Amount to pay</string>
    <string name="card_no.">Card Number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="cvv">CVV</string>
    <string name="billing_postal_code">Billing Postal Code</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="your_silver_pack">Your silver package subscription fee \n was successfull</string>
    <string name="save_your_credit_card">SAVE YOUR CREDIT CARD \n TO FASTEN THE PROCESS NEXT TIME
    </string>
    <string name="may_be_next_time">May be,next time</string>
    <string name="save">save</string>
    <string name="long_term">Long Term</string>
    <string name="domestic">Domestic</string>
    <string name="short_term">Short Term</string>
    <string name="international">International</string>
    <string name="driver_license">Driver License</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="job_duties">Job duties</string>
    <string name="experience_required">Experience Required</string>
    <string name="skill_characteristics_required">Skill/Characteristics Required</string>
    <string name="network_error">Network error</string>
    <string name="internet_connection_error">Internet connection error</string>
    <string name="title_activity_maps">Map</string>

    <string name="alert_welcome_error_google_data">Error in getting Google Profile Data.</string>
</resources>
