<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:orientation="vertical">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight=".3"
                  android:gravity="center"
                  android:orientation="vertical">

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:text="@string/thanks_for_the_feedback"/>
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/margin_10"
                  android:gravity="center"
                  android:text="@string/the_feedback_is_only_visible_to_admin"/>
    </LinearLayout>
    <View android:layout_width="match_parent" android:layout_height="8dp"
          android:background="@color/grey">/
    </View>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/thirty_dp"
                  android:layout_weight=".5"
                  android:orientation="vertical">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:text="@string/schedule_trail"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:padding="@dimen/twenty_dp"
        android:orientation="horizontal"
        android:weightSum="1">

            <Button android:layout_width="wrap_content"
                    android:layout_height="@dimen/sixty_dp"
                    android:layout_weight=".5"
                    android:text="@string/yes"
                    android:background="@drawable/relative_layout_white_border"
                    android:layout_marginRight="@dimen/ten_dp"
            />
            <Button android:layout_width="wrap_content"
                    android:layout_height="@dimen/sixty_dp"
                    android:layout_weight=".5"
                    android:text="@string/no"
                    android:background="@drawable/relative_layout_white_border"
                    android:layout_marginLeft="@dimen/ten_dp"
            />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>