<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_offer_position"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.androidapp.bahs.activity.OfferPositionActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_5"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/margin_45"
                android:layout_height="@dimen/margin_45"
                android:src="@drawable/com_facebook_profile_picture_blank_square"
                android:id="@+id/profile_imageView" />
            <TextView
                android:text="@string/nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nickname_textView"
                android:layout_marginLeft="@dimen/margin_10"
                android:textSize="@dimen/text16size"
                />
            <TextView
                android:text="@string/comma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/comma_textView"
                android:layout_marginLeft="@dimen/margin_5"
                android:textSize="@dimen/text16size"
                />
            <TextView
                android:text="@string/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/age_textView"
                android:layout_marginLeft="@dimen/margin_5"
                android:textSize="@dimen/text16size"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginLeft="@dimen/margin_55"
            android:id="@+id/_job_detail_linearLayout"
            >

            <TextView
                android:text="@string/job_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/_job_time_textView"
                android:layout_marginLeft="@dimen/margin_10"
                android:textSize="@dimen/text16size"
                android:layout_marginTop="@dimen/margin_5"
                android:drawableLeft="@android:drawable/ic_lock_idle_alarm"
                android:drawablePadding="@dimen/margin_10"
                />
            <TextView
                android:text="@string/job_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/job_place_textView"
                android:layout_marginLeft="@dimen/margin_10"
                android:textSize="@dimen/text16size"
                android:layout_marginTop="@dimen/margin_5"
                android:drawableLeft="@android:drawable/ic_lock_idle_alarm"
                android:drawablePadding="@dimen/margin_10"

                />
            <TextView
                android:text="@string/job_wages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/job_wages_textView"
                android:layout_marginLeft="@dimen/margin_10"
                android:textSize="@dimen/text16size"
                android:layout_marginTop="@dimen/margin_5"
                android:drawableLeft="@android:drawable/ic_lock_idle_alarm"
                android:drawablePadding="@dimen/margin_10"
                />
            <TextView
                android:text="@string/job_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/job_detail_textView"
                android:layout_marginLeft="@dimen/margin_10"
                android:textSize="@dimen/text16size"
                android:layout_marginTop="@dimen/margin_5"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            android:id="@+id/_more_job_detail_linearLayout"
            >
            <TextView
                android:text="@string/view_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/view_more_textView"
                android:layout_marginLeft="@dimen/margin_10"
                android:textSize="@dimen/text16size"
                android:drawablePadding="@dimen/margin_5"
                android:drawableLeft="@android:drawable/ic_menu_add"
                android:layout_marginTop="@dimen/margin_5"
                android:gravity="center"
                />

        </LinearLayout>
<View
    android:layout_width="match_parent"
    android:layout_height="@dimen/margin_5"
    android:background="@color/gray"
    ></View>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_10"
            android:id="@+id/expire_linearLayout"
            >
            <TextView
                android:text="@string/offer_expire"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/offer_expire_textView"
                android:layout_marginLeft="@dimen/margin_20"
                android:textSize="@dimen/text16size"
                android:gravity="center"

                />

            <EditText
                android:layout_width="@dimen/margin_80"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText"
                android:padding="@dimen/margin_10"
                android:layout_marginLeft="@dimen/margin_20"
                android:background="@drawable/relative_layout_border"
              />
            <TextView
                android:text="@string/days"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/days_textView"
                android:layout_marginLeft="@dimen/margin_10"
                android:textSize="@dimen/text16size"
                android:gravity="center"
                />

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_10"
            android:id="@+id/compentation_linearLayout"
            >
            <TextView
                android:text="@string/compentation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/compentation_textView"
                android:layout_marginLeft="@dimen/margin_20"
                android:textSize="@dimen/text16size"
                android:layout_marginTop="@dimen/margin_5"
                />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_5"
                android:weightSum="2"
                >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/hourly"
                    android:layout_weight="1"


                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yearly"
                    android:layout_weight="1"
                    />
            </RadioGroup>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_10"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/compentation_editText"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:hint="$##"
                android:background="@drawable/relative_layout_border"

                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_10"
            android:id="@+id/offer_period_linearLayout"
            >
            <TextView
                android:text="@string/offer_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/offer_peroid_textView"
                android:layout_marginLeft="@dimen/margin_20"
                android:textSize="@dimen/text16size"
                android:layout_marginTop="@dimen/margin_5"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_10"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/offer_peroid_date_editText"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:hint="@string/fromto"
                android:drawableLeft="@android:drawable/ic_menu_my_calendar"
                android:background="@drawable/relative_layout_border"

                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_10"
                android:weightSum="2"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_10"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/offer_peroid_time_from_editText"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_20"
                    android:hint="@string/from"
                    android:drawableLeft="@android:drawable/ic_menu_my_calendar"
                    android:background="@drawable/relative_layout_border"
                    android:layout_weight="1"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_10"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/offer_peroid_time_to_editText"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_20"
                    android:hint="@string/to"
                    android:drawableLeft="@android:drawable/ic_menu_my_calendar"
                    android:background="@drawable/relative_layout_border"
                    android:layout_weight="1"

                    />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_48"
            android:background="@drawable/relative_layout_border"
            android:text="@string/submit"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_10"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:textColor="@color/black"
            />
    </LinearLayout>
</ScrollView>

</RelativeLayout>
