<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:orientation="vertical">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight=".3"
                  android:gravity="center"
                  android:orientation="vertical">

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/margin_10"
                  android:gravity="center"
                  android:text="@string/your_silver_pack"/>
    </LinearLayout>
    <View android:layout_width="match_parent" android:layout_height="8dp"
          android:background="@color/grey">/
    </View>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/thirty_dp"
                  android:layout_weight=".5"
                  android:orientation="vertical">

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:text="@string/save_your_credit_card"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:padding="@dimen/twenty_dp"
        >

            <Button android:layout_width="wrap_content"
                    android:layout_height="@dimen/sixty_dp"
                    android:layout_marginRight="@dimen/ten_dp"
                    android:layout_weight=".5"
                    android:background="@drawable/relative_layout_white_border"
                    android:text="@string/save"
            />


        </LinearLayout>
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:text="@string/may_be_next_time"/>
    </LinearLayout>

</LinearLayout>