<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/rootRel"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <!--  <include
          android:id="@+id/include_header"
          layout="@layout/header"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/twenty_dp"

        android:layout_marginRight="@dimen/twenty_dp"
        android:orientation="vertical"

        >

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="match_parent"
            android:layout_height="@dimen/hundred_dp"
            android:gravity="center"

            android:textColor="@color/red"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/text_forgot_mess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:text="@string/email_forgot"
            android:textColor="@color/txt_t_c"
            android:textSize="@dimen/margin_15"/>

        <RelativeLayout
            android:id="@+id/relativelLayout_editText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_48"
            android:layout_marginTop="@dimen/twenty_dp"
            >

            <ImageView
                android:id="@+id/img_email"
                style="@style/common_imge_view"
                android:src="@drawable/new_post"/>

            <EditText
                android:id="@+id/edt_email"
                style="@style/edittext"
                android:hint="@string/email"

                android:inputType="textNoSuggestions|textEmailAddress"
                />

            <View
                android:id="@+id/view_signIn2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_below="@id/edt_email"
                android:layout_marginTop="@dimen/five_dp"
                android:background="@color/line"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_48"
            android:layout_marginTop="@dimen/fourty_dp"
            android:background="@drawable/leftmenu_myoffers_btn_selector"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/text_22"/>
    </LinearLayout>

</RelativeLayout>



